# stock-monitor-v01

./: CLAUDE.md
development/: .env.example  .gitignore  Cargo.toml  deny.toml
development/.github/workflows/: ci.yml
development/src/: config.rs  db.rs  error.rs  main.rs
development/src/calendar/: mod.rs
development/src/market_data/: mod.rs
development/src/models/: mod.rs
development/src/monitor/: mod.rs
development/src/risk/: mod.rs
development/src/routes/: health.rs  mod.rs  telegram.rs
development/src/scanner/: mod.rs
development/src/ta/: mod.rs
development/src/telegram/: mod.rs
documents/: 00_initial-plan.md  01_mvp-and-roadmap.md
